# UniPatcher

./: .gitignore  .gitmodules  .travis.yml  Changelog.md  PrivacyPolicy.md  README.md  build.gradle  gradle.properties  push_source_strings_to_translate_server.sh  update_translations.sh
.github/: FUNDING.yml
.tx/: config
app/: CMakeLists.txt  build.gradle  google-services.json  proguard-android.txt  proguard-rules.pro
app/src/free/res/drawable/: ic_bitcoin.xml
app/src/free/res/layout/: activity_donate.xml
app/src/google/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  xdelta3.c
app/src/main/cpp/xdelta/: CMakeLists.txt  xdelta3.c
app/src/main/cpp/xdelta1/: Application.mk
app/src/main/cpp/xz/: CMakeLists.txt
app/src/main/res/anim/: slide_from_bottom.xml
app/src/main/res/color/: drawer_state_color.xml
app/src/main/res/drawable/: book.xml  content_cut.xml  content_save.xml  drawer_item_selector.xml  drawer_item_shape.xml  fingerprint.xml  folder.xml  folder_upload.xml  ic_book.xml  ic_brightness_medium.xml  ic_content_cut.xml  ic_fingerprint.xml  ic_gift.xml  ic_help.xml  ic_launcher_foreground.xml  plus_box.xml  theme_light_dark_24dp.xml  thumb_up.xml
app/src/main/res/drawable-ldrtl/: drawer_item_shape.xml
app/src/main/res/drawable-night/: book.xml  fingerprint.xml  theme_light_dark_24dp.xml
app/src/main/res/layout/: activity_donate.xml  activity_file_picker.xml  activity_help.xml  activity_main.xml  activity_main_content.xml  activity_settings.xml  apply_patch_fragment.xml  create_patch_fragment.xml  file_picker_row_item.xml  fragment_about.xml  fragment_changelog.xml  fragment_faq.xml  fragment_file_details.xml  nav_header_main.xml  patching_fragment.xml  smd_fix_checksum_fragment.xml  snes_smc_header_fragment.xml  toolbar.xml
app/src/main/res/menu/: activity_help.xml  activity_main_drawer.xml
app/src/main/res/raw-es/: about.html  about.md  changelog.md  faq.html  faq.md
app/src/main/res/raw-fr/: about.html  about.md  changelog.md  faq.html  faq.md
app/src/main/res/raw-it/: about.html  about.md  changelog.html  changelog.md  faq.html  faq.md
app/src/main/res/raw-ja/: about.html  about.md  changelog.md  faq.html  faq.md
app/src/main/res/raw-ko/: about.html  about.md  changelog.md  faq.html  faq.md
app/src/main/res/raw-nb-rNO/: about.html  about.md  changelog.md  faq.html  faq.md
app/src/main/res/raw-pl/: about.html  about.md  changelog.html  changelog.md  faq.html  faq.md
app/src/main/res/raw-pt/: about.html  (+4 more)
fastlane/metadata/android/ckb/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/de/: full_description.txt  short_description.txt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  software_url.txt  title.txt
fastlane/metadata/android/es/: full_description.txt  short_description.txt
fastlane/metadata/android/fr/: short_description.txt
fastlane/metadata/android/he/: full_description.txt  short_description.txt
fastlane/metadata/android/id/: full_description.txt  short_description.txt
fastlane/metadata/android/it/: full_description.txt  short_description.txt
fastlane/metadata/android/ko/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/lt/: full_description.txt  short_description.txt
fastlane/metadata/android/nb_NO/: full_description.txt  short_description.txt  software_url.txt
fastlane/metadata/android/pl/: full_description.txt  short_description.txt
fastlane/metadata/android/pt/: full_description.txt  short_description.txt
fastlane/metadata/android/pt_BR/: full_description.txt  short_description.txt
fastlane/metadata/android/ru-RU/: full_description.txt  short_description.txt
fastlane/metadata/android/tr/: full_description.txt  short_description.txt
fastlane/metadata/android/uk/: full_description.txt  short_description.txt  title.txt
google-play/: feature-image.xcf  promo-image.xcf
google-play/en/: google-play.txt
google-play/es/: google-play.txt
google-play/fr/: google-play.txt
google-play/it/: google-play.txt
google-play/ja/: google-play.txt
google-play/ko/: google-play.txt
google-play/nb-rNO/: google-play.txt
google-play/pl/: google-play.txt
google-play/pt/: google-play.txt
google-play/ru/: google-play.txt
google-play/uk/: google-play.txt
google-play/zh-rCN/: google-play.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+291 files in other folders)
