project(lzma)

set(XZ_DIR "xz/src")

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -DHAVE_INTTYPES_H -DHAVE_STDINT_H -DHAVE_LIMITS_H -DHAVE_STDBOOL_H -std=c99 -DMYTHREAD_POSIX -DHAVE_COMMON_H -DHAVE_DECODER_LZMA1 -DHAVE_DECODER_LZMA2 -DHAVE_DECODER_DELTA")

include_directories("${XZ_DIR}/common"
        "${XZ_DIR}/liblzma/api"
        "${XZ_DIR}/liblzma/check"
        "${XZ_DIR}/liblzma/common"
        "${XZ_DIR}/liblzma/delta"
        "${XZ_DIR}/liblzma/lz"
        "${XZ_DIR}/liblzma/lzma"
        "${XZ_DIR}/liblzma/rangecoder"
        "${XZ_DIR}/liblzma/simple")

set(SRC_LIST
        "${XZ_DIR}/common/tuklib_physmem.c"
        "${XZ_DIR}/common/tuklib_cpucores.c"
        "${XZ_DIR}/liblzma/common/common.c"
        "${XZ_DIR}/liblzma/common/block_util.c"
        "${XZ_DIR}/liblzma/common/easy_preset.c"
        "${XZ_DIR}/liblzma/common/filter_common.c"
        "${XZ_DIR}/liblzma/common/hardware_physmem.c"
        "${XZ_DIR}/liblzma/common/index.c"
        "${XZ_DIR}/liblzma/common/stream_flags_common.c"
        "${XZ_DIR}/liblzma/common/vli_size.c"
        "${XZ_DIR}/liblzma/common/hardware_cputhreads.c"
        "${XZ_DIR}/liblzma/common/alone_encoder.c"
        "${XZ_DIR}/liblzma/common/block_buffer_encoder.c"
        "${XZ_DIR}/liblzma/common/block_encoder.c"
        "${XZ_DIR}/liblzma/common/block_header_encoder.c"
        "${XZ_DIR}/liblzma/common/easy_buffer_encoder.c"
        "${XZ_DIR}/liblzma/common/easy_encoder.c"
        "${XZ_DIR}/liblzma/common/easy_encoder_memusage.c"
        "${XZ_DIR}/liblzma/common/filter_buffer_encoder.c"
        "${XZ_DIR}/liblzma/common/filter_encoder.c"
        "${XZ_DIR}/liblzma/common/filter_flags_encoder.c"
        "${XZ_DIR}/liblzma/common/index_encoder.c"
        "${XZ_DIR}/liblzma/common/stream_buffer_encoder.c"
        "${XZ_DIR}/liblzma/common/stream_encoder.c"
        "${XZ_DIR}/liblzma/common/stream_flags_encoder.c"
        "${XZ_DIR}/liblzma/common/vli_encoder.c"
        "${XZ_DIR}/liblzma/common/outqueue.c"
        "${XZ_DIR}/liblzma/common/stream_encoder_mt.c"
        "${XZ_DIR}/liblzma/common/alone_decoder.c"
        "${XZ_DIR}/liblzma/common/auto_decoder.c"
        "${XZ_DIR}/liblzma/common/block_buffer_decoder.c"
        "${XZ_DIR}/liblzma/common/block_decoder.c"
        "${XZ_DIR}/liblzma/common/block_header_decoder.c"
        "${XZ_DIR}/liblzma/common/easy_decoder_memusage.c"
        "${XZ_DIR}/liblzma/common/filter_buffer_decoder.c"
        "${XZ_DIR}/liblzma/common/filter_decoder.c"
        "${XZ_DIR}/liblzma/common/filter_flags_decoder.c"
        "${XZ_DIR}/liblzma/common/index_decoder.c"
        "${XZ_DIR}/liblzma/common/index_hash.c"
        "${XZ_DIR}/liblzma/common/stream_buffer_decoder.c"
        "${XZ_DIR}/liblzma/common/stream_decoder.c"
        "${XZ_DIR}/liblzma/common/stream_flags_decoder.c"
        "${XZ_DIR}/liblzma/common/vli_decoder.c"
        "${XZ_DIR}/liblzma/check/check.c"
        "${XZ_DIR}/liblzma/check/crc32_table.c"
        "${XZ_DIR}/liblzma/check/crc32_fast.c"
        "${XZ_DIR}/liblzma/check/crc64_table.c"
        "${XZ_DIR}/liblzma/check/crc64_fast.c"
        "${XZ_DIR}/liblzma/check/sha256.c"
        "${XZ_DIR}/liblzma/lz/lz_encoder.c"
        "${XZ_DIR}/liblzma/lz/lz_encoder_mf.c"
        "${XZ_DIR}/liblzma/lz/lz_decoder.c"
        "${XZ_DIR}/liblzma/lzma/lzma_encoder_presets.c"
        "${XZ_DIR}/liblzma/lzma/lzma_encoder.c"
        "${XZ_DIR}/liblzma/lzma/lzma_encoder_optimum_fast.c"
        "${XZ_DIR}/liblzma/lzma/lzma_encoder_optimum_normal.c"
        "${XZ_DIR}/liblzma/lzma/fastpos_table.c"
        "${XZ_DIR}/liblzma/lzma/lzma_decoder.c"
        "${XZ_DIR}/liblzma/lzma/lzma2_encoder.c"
        "${XZ_DIR}/liblzma/lzma/lzma2_decoder.c"
        "${XZ_DIR}/liblzma/rangecoder/price_table.c"
        "${XZ_DIR}/liblzma/delta/delta_common.c"
        "${XZ_DIR}/liblzma/delta/delta_encoder.c"
        "${XZ_DIR}/liblzma/delta/delta_decoder.c"
        "${XZ_DIR}/liblzma/simple/simple_coder.c"
        "${XZ_DIR}/liblzma/simple/simple_encoder.c"
        "${XZ_DIR}/liblzma/simple/simple_decoder.c"
        "${XZ_DIR}/liblzma/simple/x86.c"
        "${XZ_DIR}/liblzma/simple/powerpc.c"
        "${XZ_DIR}/liblzma/simple/ia64.c"
        "${XZ_DIR}/liblzma/simple/arm.c"
        "${XZ_DIR}/liblzma/simple/armthumb.c"
        "${XZ_DIR}/liblzma/simple/sparc.c")

add_library(lzma SHARED ${SRC_LIST})